# crypto-prices-scraper

./: README.md
app/: .env  Cargo.toml
app/crates/api/: Cargo.toml
app/crates/api/src/: handlers.rs  lib.rs  structs.rs
app/crates/db/: Cargo.toml
app/crates/db/migrations/2025-10-08-063533-0000_create_bars_1min/: down.sql  up.sql
app/crates/db/migrations/2025-10-08-075126-0000_add_defaut_timestamp_bars_1min/: down.sql  up.sql
app/crates/db/src/: db.rs  lib.rs  models.rs  schema.rs
app/crates/exchange/: Cargo.toml
app/crates/exchange/src/: binance.rs  bybit.rs  enums.rs  kucoin.rs  lib.rs  structs.rs  traits.rs  util.rs
app/crates/exchange/src/exchanges/: binance.rs  bybit.rs  kucoin.rs  mod.rs
app/crates/scrapper_engine/: Cargo.toml
app/crates/scrapper_engine/src/: engine.rs  lib.rs  structs.rs  utils.rs
app/src/: engine.rs  main.rs  utils.rs
app/src/exchange/: binance.rs  bybit.rs  kucoin.rs  mod.rs
