[package]
name = "app"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "crates/exchange", "crates/scrapper_engine"]

[dependencies]
exchange = { path = "crates/exchange"}
scrapper_engine = { path = "crates/scrapper_engine"}

tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }