[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
db = { path = "../db" }

tokio = "1.47.1"
axum = "0.8.6"
diesel = { version = "2.2", features = ["postgres", "chrono", "r2d2", "numeric"] }
bigdecimal = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }