[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.2", features = ["postgres", "numeric", "r2d2"] }
chrono = { version = "0.4.42", features = ["serde"] }
bigdecimal = { version = "0.4.8", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }